--- a/spark-cluster/docker-compose_cluster.yml
+++ b/spark-cluster/docker-compose_cluster.yml
@@ -44,12 +44,15 @@ services:
           - node.role!=manager
 
 volumes:
+  hdfs-master-index:
+    external: true
+    name: 'hdfs_master_index'
+  hdfs-master-checkpoint:
+    external: true
+    name: 'hdfs_master_checkpoint'
   hdfs-master-data:
     external: true
     name: 'hdfs_master_data'
-  hdfs-master-checkpoint-data:
-    external: true
-    name: 'hdfs_master_checkpoint_data'
   hdfs-worker-data:
     external: true
     name: 'hdfs_worker_data'
