--- a/spark-cluster/docker-compose.yml
+++ b/spark-cluster/docker-compose.yml
@@ -60,5 +60,6 @@ volumes:
 # Uses cluster-net network
 networks:
   cluster-net:
+    attachable: true
     driver_opts:
       com.docker.network.driver.mtu: 1280
