--- a/spark-cluster/Dockerfile
+++ b/spark-cluster/Dockerfile
@@ -17,8 +17,11 @@ RUN apt update \
     && echo 'sshd:ALL:allow' >> /etc/hosts.allow \
     && ssh-keygen -q -t ed25519 -N '' -f ~/.ssh/id_rsa \
     && cat ~/.ssh/id_rsa.pub > ~/.ssh/authorized_keys \
-    && echo 'PermitRootLogin yes' >> /etc/ssh/sshd_config \
-    && echo '    MACs hmac-sha2-256' >> /etc/ssh/ssh_config \
+    && echo 'PermitRootLogin yes' >> /etc/ssh/sshd_config \	
+	# Change SSH Port to 2020
+	&& echo 'Port 2020' >> /etc/ssh/sshd_config \
+	&& echo '    Port 2020' >> /etc/ssh/ssh_config \
+	&& echo '    MACs hmac-sha2-256' >> /etc/ssh/ssh_config \
     && service ssh restart
 
 # Downloads and extracts Hadoop
